Bug 400360 nsLDAPAutoCompleteSession leaks nsILDAPConnection, p=Simon Wilkinson <simon@sxw.org.uk>,r=me,sr=bienvenu